# goosberry

./: Cargo.toml  README.md
src/: ecs.rs  lib.rs  rendering.rs
src/ecs/: components.rs  entity.rs  game.rs  world.rs
src/example/: main.rs
src/rendering/: two_d.rs
src/rendering/two_d/: camera.rs  render.rs  sprite.rs  texture.rs
src/rendering/two_d/shaders/: sprite_unlit.wgsl
